--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -11,4 +11,4 @@ location: "San Francisco, California"
 # NLS Soliton
 ===
 
-![Soliton Evolution](/images/IntraChiral3D.pdf)
+<img src=raghavendra.nimiwal.github.io/images/IntraChiral3D.pdf>
