--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -12,3 +12,5 @@ location: "San Francisco, California"
 ===
 
 <img src="raghavendranimiwal.github.io/images/IntraChiral3D.pdf">
+
+<img src="raghavendranimiwal.github.io/images/webpageProfile.png">
