--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -8,9 +8,10 @@ date: 2012-03-01
 location: "San Francisco, California"
 ---
 
-# NLS Soliton
+NLS Soliton
 ===
 
-<img src="raghavendranimiwal.github.io/images/IntraChiral3D.pdf">
+Chiral reduction of PDE
 
+<img src="raghavendranimiwal.github.io/images/IntraChiral3D.pdf">
 <img src="raghavendranimiwal.github.io/images/webpageProfile.png">
