--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -13,5 +13,5 @@ NLS Soliton
 
 Chiral reduction of PDE
 
-<img src="raghavendranimiwal.github.io/images/IntraChiral3D.pdf">
-<img src="raghavendranimiwal.github.io/images/webpageProfile.png">
+<img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3D.pdf">
+<img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.png">
