--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -14,4 +14,7 @@ NLS Soliton
 Chiral reduction of PDE
 
 <img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3D.pdf">
+
 <img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.png">
+
+![Alt Text](https://media.giphy.com/media/vFKqnCdLPNOKc/giphy.gif)
