--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -13,7 +13,7 @@ NLS Soliton
 
 Chiral reduction of PDE
 
-<img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3D.pdf">
+<img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3D.jpg">
 
 <img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.png">
 
