Images and GIF added

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -17,4 +17,6 @@ Chiral reduction of PDE
 
 <img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.png">
 
+<img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.gif">
+
 ![Alt Text](https://media.giphy.com/media/vFKqnCdLPNOKc/giphy.gif)
