Image, video and GIF added

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -19,4 +19,6 @@ Chiral reduction of PDE
 
 <img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.gif">
 
+<img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.mp4">
+
 ![Alt Text](https://media.giphy.com/media/vFKqnCdLPNOKc/giphy.gif)
