--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -12,13 +12,12 @@ NLS Soliton
 ===
 
 Chiral reduction of PDE
+hydrodynamics
 
 <img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3D.jpg">
 
-<img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.png">
+<img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3DGIF.gif">
 
-<img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.gif">
-
-<img src="{{sute.url}}{{site.baseurl}}/images/webpageProfile.mp4">
+<img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3D.mp4">
 
 ![Alt Text](https://media.giphy.com/media/vFKqnCdLPNOKc/giphy.gif)
