--- a/_projects/2020-09-13-project-1.md
+++ b/_projects/2020-09-13-project-1.md
@@ -1,7 +1,8 @@
 ---
 title: "NLS Soliton"
 collection: projects
-permalink: /projects/2020-09-13-NonlinearSchrodingerEquation
+permalink: /projects/2020-09-13-project-1
+date: 2020-09-13
 ---
 
 # NLS Soliton
