--- a/_projects/2020-09-13-project-1.md
+++ b/_projects/2020-09-13-project-1.md
@@ -5,18 +5,15 @@ permalink: /projects/2020-09-13-project-1
 date: 2020-09-13
 ---
 
-# NLS Soliton
-===
-NLS Soliton
-===
-
-Chiral reduction of PDE
-hydrodynamics
-
 <img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3D.jpg">
+
+Nonlinear Schrodinger Equation is ubiquotous in nature, still not much is knowning about the dynamics of the equation. Here we provide a method with which NLS can be mapped to KdV (which is another nonlinear PDE). Since KdV is a well studied system we can know about certain qualitatuive aspects of NLS as well from this effective mapping. 
+
+KdV has a nonlinear term and a dispersion term, under special conditions you can balance these two effects and you get a travelling wave which is called a soliton. With the effective mapping we figured out such initial conditions for NLS as well.
 
 <img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3DGIF.gif">
 
-<img src="{{sute.url}}{{site.baseurl}}/images/IntraChiral3D.mp4">
+The above movie shows the propagation of two solitons and there interaction.
 
+Thats All !
 ![Alt Text](https://media.giphy.com/media/vFKqnCdLPNOKc/giphy.gif)
