ipynb to markdown test

--- a/_projects/2020-09-11-project-3.md
+++ b/_projects/2020-09-11-project-3.md
@@ -5,7 +5,9 @@ permalink: /projects/2020-09-11-project-3
 date: 2020-09-11
 ---
 
-$$\frac{\partial u}{\partial t} = \alpha \frac{\partial^2 u}{\partial x^2}, \quad \quad x \in (-L/2,L/2), \quad t \in (0,T] \tag{1}$$
+\begin{align}
+  \frac{\partial u}{\partial t} = \alpha \frac{\partial^2 u}{\partial x^2}, \quad \quad x \in (-L/2,L/2), \quad t \in (0,T] \tag{1}
+\end{align}
 
 with initial condiditon 
 
