--- a/_projects/2020-09-11-project-3.md
+++ b/_projects/2020-09-11-project-3.md
@@ -28,7 +28,9 @@ Let the solution in the fourier space be $\hat{u}(k,t)$, where $k$ represents th
 \end{align}
 
 Therefore the solution in our real space for the $k^{th}$ mode will be
-$$ u(x,t) = \hat{u}(k,0)e^{ikx}e^{-\alpha k^2 t} \tag{2} $$
+\begib{align}
+  u(x,t) = \hat{u}(k,0)e^{ikx}e^{-\alpha k^2 t} \tag{2}
+\end{align}
 Eq. 2 shows that the amplitude of each of $k^{th}$ mode decreases exponential with the rate $\alpha k^2$. This means the high frequency modes damp out faster that the low frequency modes.
 
 ## Discretisation
@@ -123,7 +125,7 @@ plt.show()
 
 
 
-![png](DiffusionEquation_files/DiffusionEquation_5_1.png)
+![png](/ipynbImages/DiffusionEquation_files/DiffusionEquation_5_1.png)
 
 
 ### Results
@@ -207,7 +209,7 @@ plt.show()
 
 
 
-![png](DiffusionEquation_files/DiffusionEquation_8_1.png)
+![png](/ipynbImages/DiffusionEquation_files/DiffusionEquation_8_1.png)
 
 
 ## Stability Analysis
