--- a/_knowledgeBase/2020-09-11-project-3.md
+++ b/_knowledgeBase/2020-09-11-project-3.md
@@ -1,7 +1,7 @@
 ---
 title: "Diffusion Equation part 2"
-collection: projects
-permalink: /projects/2020-09-11-project-3
+collection: knowledge-base
+permalink: /knowledge-base/2020-09-11-project-3
 date: 2020-09-11
 ---
 
