--- a/_knowledgeBase/2020-09-11-project-3.md
+++ b/_knowledgeBase/2020-09-11-project-3.md
@@ -1,6 +1,6 @@
 ---
 title: "Diffusion Equation part 2"
-collection: knowledge-base
+collection: teaching
 permalink: /knowledge-base/2020-09-11-project-3
 date: 2020-09-11
 ---
